@startuml

[*] --> STARTED : start by request

STARTED --> MAKING_CSV_FILES : fetch products

MAKING_CSV_FILES --> MAKING_CSV_FILES : make csv files

MAKING_CSV_FILES --> MAKING_ZIP_ARCHIVES : make zip archives

MAKING_ZIP_ARCHIVES --> IDLE : finish making archives

IDLE --> IDLE : send email

IDLE --> [*]

MAKING_CSV_FILES : make csv files up to brand and category
MAKING_ZIP_ARCHIVES : make zip for each brand

@enduml